# BISense

./: .env.example  .gitignore  README.md  artifacts.md  docker-compose.override.yml  docker-compose.yml
backend/: requirements.txt
backend/app/services/: duckdb_service.py  file_service.py  llm_service.py  schema_service.py  session_service.py
docs/: backend_lld.md  frontend_lld.md
docs/diagrams/: backend_lld.excalidraw  duckdb_lld.excalidraw  hld.excalidraw
docs/superpowers/plans/: 2026-04-01-backend-implementation.md
mcp-server/: .env.example  pyproject.toml  requirements.txt
