[project]
name = "bisense-mcp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "duckdb>=0.10.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "pyarrow>=15.0.0",
]

[project.scripts]
bisense-mcp = "bisense_mcp.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
select = ["E", "W", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
